# libobs-rs

./: .better-commits.json  .gitattributes  .gitignore  Cargo.toml  MACOS_STATUS.md  README.md  WINDOWS_TEST_INSTRUCTIONS.md  build.rs  cov_out.txt  cross-compile-windows.sh  flake.nix  test_permissions.sh
cargo-obs-build/: BUILD_SCRIPT_EXAMPLE.md  CI_SETUP.md  Cargo.toml  README.md
cargo-obs-build/src/: args.rs  download.rs  git.rs  lib.rs  lib_version.rs  lock.rs  macos.rs  main.rs  metadata.rs  util.rs  win.rs
cargo-obs-build/tests/: test_build_script.rs
examples/download-at-runtime/: Cargo.toml  build.rs
examples/download-at-runtime/src/: main.rs  record.rs
examples/monitor-capture/: Cargo.toml
examples/monitor-capture/src/: main.rs  windows.rs
examples/obs-flow/: Cargo.toml
examples/obs-flow/src/: main.rs  windows.rs
examples/obs-preview/: Cargo.toml
examples/obs-preview/src/: hdr_config.rs  main.rs  windows.rs
libobs/: Cargo.toml  README.md  build.rs  obs.lib
libobs-bootstrapper/: Cargo.toml  README.md  build.rs
libobs-bootstrapper/src/: download.rs  error.rs  error_tests.rs  extract.rs  github_types.rs  lib.rs  options.rs  options_tests.rs  status_handler.rs  updater.ps1  version.rs  version_tests.rs
libobs-bootstrapper/tests/: macos_support.rs
libobs-build/: Cargo.toml
libobs-build/src/: win.rs
libobs-encoders/libobs-encoders-generator/: Cargo.toml
libobs-encoders/libobs-encoders-generator/src/: enums.rs  main.rs
libobs-segfault-trace/: Cargo.toml  convert_dump.ps1
libobs-segfault-trace/src/: main.rs
libobs-simple/: Cargo.toml  README.md
libobs-simple-macro/: Cargo.toml  README.md
libobs-simple-macro/src/: docs.rs  lib.rs
libobs-simple/examples/: quick_start.rs
libobs-simple/src/: lib.rs  quick_start.rs
libobs-simple/src/output/: mod.rs  simple.rs
libobs-simple/src/sources/: macro_helper.rs  mod.rs  output.rs
libobs-simple/tests/: gpu_encoder_test_switch.rs  gpu_integration_preview_test.rs  gpu_leak_test_recording.rs  gpu_leak_test_source.rs  gpu_sources_test_game_capture.rs  gpu_sources_test_monitor_capture.rs  gpu_sources_test_window_capture.rs  integration_test_data.rs  integration_test_scene_management.rs
libobs-simple/tests/common/: initialize.rs  mod.rs
libobs-source-macro/: Cargo.toml  README.md
libobs-source-macro/src/: fields.rs  lib.rs  obs_properties.rs  parse.rs
libobs-sources/: Cargo.toml  Makefile.toml  README.md
libobs-sources/src/: lib.rs  macro_helper.rs  output.rs
libobs-sources/src/encoders/: mod.rs
libobs-sources/src/linux/: README.md
libobs-sources/src/linux/sources/: alsa_input.rs  jack_input.rs  linux_general_screen_capture.rs  linux_general_window_capture.rs  mod.rs  pipewire_capture.rs  pulse_input.rs  v4l2_input.rs  x11_capture.rs  xcomposite_input.rs
libobs-sources/src/macos/: mod.rs
libobs-sources/src/macos/sources/: mod.rs  screen_capture.rs
libobs-sources/src/windows/: capture.rs  game_capture.rs  mod.rs  monitor_capture.rs  window_capture.rs
libobs-sources/src/windows/sources/: capture.rs  game_capture.rs  mod.rs  monitor_capture.rs  window_capture.rs
libobs-sources/tests/: encoder_test_switch.rs  gpu_encoder_test_switch.rs  gpu_integration_preview_test.rs  gpu_leak_test_output_with_encoders.rs  gpu_leak_test_recording.rs  gpu_leak_test_source.rs  gpu_sources_test_game_capture.rs  gpu_sources_test_monitor_capture.rs  gpu_sources_test_window_capture.rs  integration_test_data.rs  integration_test_encoder_properties.rs  integration_test_output_lifecycle.rs  integration_test_scene_management.rs  leak_test_output.rs  leak_test_output_with_encoders.rs  leak_test_recording.rs  leak_test_scene.rs  leak_test_source.rs  leak_test_startup.rs  linux_sources_test.rs  mod.rs  sources_test_window_capture.rs
libobs-sources/tests/common/: initialize.rs  mod.rs
libobs-sources/tests/windows/: mod.rs  test_game_capture.rs  test_monitor_capture.rs  test_window_capture.rs
libobs-window-helper/: .gitignore  Cargo.toml  README.md
libobs-window-helper/src/: game.rs  lib.rs  monitor.rs  test.rs  window.rs
libobs-window-helper/src/util/: helper.rs  mod.rs  string_conv.rs  string_conv_tests.rs  validators.rs  win_iterator.rs
libobs-wrapper/: .gitignore  Cargo.toml  README.md  build.rs  out.rs
libobs-wrapper/examples/: record_monitor.rs  screen_capture_macos.rs
libobs-wrapper/src/: context.rs  enums.rs  enums_tests.rs  lib.rs  logger.rs  macros.rs  obstypes.rs  runtime.rs  signals.rs  test.rs  unsafe_send.rs
libobs-wrapper/src/bootstrap/: download.rs  extract.rs  github_types.rs  mod.rs  options.rs  status_handler.rs  updater.ps1  version.rs
libobs-wrapper/src/crash_handler/: dialog.rs  mod.rs
libobs-wrapper/src/data/: audio.rs  immutable.rs  lib_support.rs  mod.rs  output.rs  updater.rs  video.rs
libobs-wrapper/src/data/output/: mod.rs  (+1 more)
libobs-wrapper/src/display/: buffers.rs  creation_data.rs  enums.rs  mod.rs  window_manager.rs
libobs-wrapper/src/encoders/: audio.rs  enums.rs  mod.rs  property_helper.rs  video.rs
libobs-wrapper/src/graphics/: mod.rs  vec2.rs
libobs-wrapper/src/logger/: console.rs  file.rs  mod.rs
libobs-wrapper/src/scenes/: mod.rs
libobs-wrapper/src/sources/: builder.rs  lib_support.rs  mod.rs
libobs-wrapper/src/utils/: async_sync.rs  error.rs  error_tests.rs  initialization.rs  linux.rs  mod.rs  modules.rs  obs_string.rs  obs_string_tests.rs  path.rs  path_tests.rs
libobs-wrapper/tests/: motion_test.rs  record_test.rs
libobs-wrapper/tests/common/: mod.rs
libobs/examples/: create_scene.rs  create_source.rs  list_screen_properties.rs  list_sources.rs  macos_screen_capture.rs  raw_calls.rs  record_monitor.rs  record_screen_macos.rs
libobs/headers/: display_capture.h  game_capture.h  vec4.c  window_capture.h  wrapper.h
libobs/headers/obs/: obsconfig.h
libobs/scripts/: update_headers.ps1
libobs/scripts/patches/: 001_gh_action_fix_compile.patch
libobs/src/: bindings_linux.rs  lib.rs  test.rs
libobs/src/wrapper/: mod.rs  obstypes.rs
libobs/tests/: basic_test.rs
scripts/libobs-encoders/libobs-encoders-generator/: Cargo.toml
(+112 files in other folders)
