[workspace]
resolver = "2"
members = [
    "cargo-obs-build",
    "libobs",
    "libobs-source-macro",
    "libobs-sources",
    "libobs-window-helper",
    "libobs-wrapper",
    "libobs-bootstrapper",
    "examples/*",
]
exclude = ["examples/tauri-app"]

[workspace.dependencies]
libobs = { path = "./libobs", version = "3.0.0" }
libobs-wrapper = { path = "./libobs-wrapper", version = "5.2.1" }
libobs-source-macro = { path = "./libobs-source-macro", version = "5.0.0" }
libobs-window-helper = { path = "./libobs-window-helper", version = "0.1.7" }
libobs-bootstrapper = { path = "./libobs-bootstrapper", version = "0.1.0" }

[workspace.metadata]
libobs-cache-dir = "../obs-build"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
