[workspace]
resolver = "2"
members = [
    "cargo-obs-build",
    "libobs",
    "libobs-source-macro",
    "libobs-sources",
    "libobs-window-helper",
    "libobs-wrapper",
    "libobs-bootstrapper",
    "examples/*",
]
exclude = ["examples/tauri-app", "scripts/test_assets/test_cargo_obs_build"]

[workspace.dependencies]
libobs = { path = "./libobs", version = "3.0.1" }
libobs-wrapper = { path = "./libobs-wrapper", version = "5.2.3" }
libobs-source-macro = { path = "./libobs-source-macro", version = "5.0.0" }
libobs-window-helper = { path = "./libobs-window-helper", version = "0.1.7" }
libobs-bootstrapper = { path = "./libobs-bootstrapper", version = "0.1.0" }


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
