[package]
name = "cargo-obs-build"
description = "A library and CLI tool used to build the libobs library and put it in the target directory"
version = "1.3.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/joshprk/libobs-rs"
authors = ["sshcrack"]
keywords = ["obs", "libobs", "video", "build", "prepare"]
edition = "2021"

[lib]
name = "cargo_obs_build"
path = "src/lib.rs"

[[bin]]
name = "cargo-obs-build"
path = "src/main.rs"

[dependencies]
# Core library dependencies
anyhow = { version = "1.0.100", features = ["backtrace"] }
cargo_metadata = { version = "0.23.0" }
hex = "0.4.3"
http_req = "0.14.1"
indicatif = { version = "0.18.2", optional = true}
log = "0.4.28"
process_alive = "0.2.0"
regex = { version = "1.12.2" }
serde_json = "1.0.145"
sha2 = "0.10.9"
toml = "0.9.8"
walkdir = "2.5.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

# Binary-specific dependencies
clap = { version = "4.5.51", features = ["derive"], optional = true }
colored = { version = "3.0.0", optional = true }
fern = { version = "0.7.1", features = ["colored"], optional = true }

[features]
default = ["cli"]
cli = ["clap", "colored", "fern", "indicatif"]

#TODO separate windows deps from others