[package]
name = "libobs-bootstrapper"
version = "0.1.1"
build = "build.rs"
description = "Downloads OBS binaries at runtime and bootstraps libobs"
readme = "./README.md"
repository = "https://github.com/joshprk/libobs-rs"
authors = ["Hendrik Lind <hendrik@sshcrack.me>"]
edition = "2024"
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "bootstrapper"]
license = "GPL-3.0"


[dependencies]
anyhow = "1"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4"
lazy_static = "1.4"
tokio = { version = "1", features = ["process", "macros"], default-features = false }
libobs = { workspace = true }
semver = "1"
sevenz-rust = "0.6"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
libloading = "0.9"
log = "0.4"

[features]
default = ["install_dummy_dll"]
generate_bindings = ["libobs/generate_bindings"]
install_dummy_dll = []

[lints]
workspace = true
