[package]
name = "libobs-build"
description = "A CLI tool used to build the libobs library and put it in the taregt directory"
version = "0.1.0"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
http_req = "0.11.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
toml = "0.8.17"
walkdir = "2.5.0"