[package]
name = "libobs-sources"
description = "A helper crate to create sources for OBS"
version = "3.1.0"
repository = "https://github.com/joshprk/libobs-rs"
documentation = "https://joshprk.github.io/libobs-rs/libobs_sources/"
readme = "README.md"
authors = ["sshcrack"]
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
libobs = { workspace = true }
libobs-wrapper = { workspace = true }
libobs-source-macro = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
anyhow = "1.0.97"
paste = "1.0.15"
async-trait = "0.1.88"
log = "0.4.27"

display-info = "0.5.4"
libobs-window-helper = { workspace = true, optional = true }
ffmpeg-sidecar = "2.2.0"

[features]
default = ["window-list"]
generate_bindings = ["libobs/generate_bindings"]
window-list = ["dep:libobs-window-helper"]

[dev-dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
serde_json = "1.0.145"
libobs-wrapper = { workspace = true, features = ["__panic_on_leak"] }
winit = "0.30.12"

[lints]
workspace = true
