[package]
name = "libobs-sources"
description = "A helper crate to create sources for OBS"
version = "3.2.3+32.0.2"
repository = "https://github.com/joshprk/libobs-rs"
documentation = "https://joshprk.github.io/libobs-rs/libobs_sources/"
readme = "README.md"
authors = ["sshcrack"]
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
libobs = { workspace = true }
libobs-wrapper = { workspace = true }
libobs-source-macro = { workspace = true }
num-derive = "0.4"
num-traits = "0.2"
anyhow = "1.0"
paste = "1"
log = "0.4"

display-info = "0.5"
libobs-window-helper = { workspace = true, optional = true }
ffmpeg-sidecar = { git = "https://github.com/djmango/ffmpeg-sidecar", branch = "master" }

[features]
default = ["window-list", "enable_runtime"]
generate_bindings = ["libobs/generate_bindings"]
window-list = ["dep:libobs-window-helper"]
enable_runtime = ["libobs-wrapper/enable_runtime"]

[dev-dependencies]
env_logger = "0.11"
serde_json = "1.0"
libobs-wrapper = { workspace = true, features = ["__test_environment"] }
winit = "0.30"

[lints]
workspace = true
