[package]
name = "libobs-window-helper"
version = "0.1.7"
description = "Provides a list of windows that can be captured by OBS"
edition = "2021"
readme = "README.md"
keywords = ["obs", "libobs", "window", "helper", "window-list"]
repository = "https://github.com/joshprk/obs-window-helper"
documentation = "https://joshprk.github.io/libobs-rs/libobs_window_helper/"
license = "GPL-3.0"

[dependencies]
anyhow = { version = "1.0.97" }
serde = { version = "1.0.219", features = ["derive"], optional = true }
specta = { optional = true, git = "https://github.com/specta-rs/specta", version = "=2.0.0-rc.20", features = [
    "serde",
    "interop",
    "derive",
], tag = "v2.0.0-rc.20" }

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32", "Win32_Globalization", "Win32_Graphics", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Diagnostics", "Win32_Storage_FileSystem", "Wdk_System_Threading", "Win32_System_Kernel", "Win32_System_Diagnostics_Debug", "Win32_System_Console"] }

[features]
backtrace = ["anyhow/backtrace"]
serde = ["dep:serde"]
specta = ["dep:specta"]

[dev-dependencies]
serde_json = "1.0.140"


[lints]
workspace = true
