[package]
name = "libobs-wrapper"
description = "A safe wrapper around libobs"
version = "4.0.6"
repository = "https://github.com/joshprk/libobs-rs"
documentation = "https://joshprk.github.io/libobs-rs/libobs_wrapper/"
readme = "README.md"
authors = ["sshcrack"]
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
libobs = { workspace = true, features = [] }
display-info = "0.5.4"
num-derive = "0.4.2"
num-traits = "0.2.19"
lazy_static = "1.5.0"
log = "0.4.27"
vsprintf = "2.0.0"
chrono = "0.4.40"
getters0 = "0.1.1"
colored = { version = "3.0.0", optional = true }
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31" }
uuid = { version = "1.16.0", optional = true, features = ["v4"] }
reqwest = { version = "0.12.15", features = [
    "stream",
    "json",
], optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
hex = { version = "0.4.3", optional = true }
arboard = { version = "3.4.1", optional = true }
dialog = { version = "0.3.0", optional = true }
paste = "1.0.15"
libloading = { version="0.8.6", optional = true }
futures = "0.3.31"
parking_lot = { version = "0.12.3" }
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security"
] }
duplicate = "2.0.0"
tokio = { version = "1.48.0", default-features = false, features = ["sync"] }

[features]
default = ["color-logger", "dialog_crash_handler"]
no_blocking_drops = ["tokio/rt"]
generate_bindings = ["libobs/generate_bindings"]
color-logger = ["dep:colored"]
dialog_crash_handler = ["dep:arboard", "dep:dialog"]
