[package]
name = "libobs-wrapper"
description = "A safe wrapper around libobs"
version = "5.2.3+32.0.2"
repository = "https://github.com/joshprk/libobs-rs"
documentation = "https://joshprk.github.io/libobs-rs/libobs_wrapper/"
readme = "README.md"
authors = ["sshcrack"]
build = "build.rs"
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1"
libobs = { workspace = true, features = [] }
display-info = "0.5"
num-derive = "0.4"
num-traits = "0.2"
lazy_static = "1"
log = "0.4"
vsprintf = "2"
chrono = "0.4"
getters0 = "0.1"
colored = { version = "3", optional = true }
oneshot = { version = "0.1", default-features = false, features = ["std"] }
arboard = { version = "3", optional = true }
dialog = { version = "0.3", optional = true }
paste = "1"
duplicate = "2"
tokio = { version = "1", default-features = false, features = ["sync"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security"
] }

[dev-dependencies]
libobs-sources = { path = "../libobs-sources" }

[features]
default = ["color-logger", "dialog_crash_handler", "enable_runtime"]
no_blocking_drops = ["tokio/rt"]
generate_bindings = ["libobs/generate_bindings"]
color-logger = ["dep:colored"]
enable_runtime = []
dialog_crash_handler = ["dep:arboard", "dep:dialog"]
__test_environment = []
