[package]
name = "libobs"
version = "2.1.0"
description = "LibOBS bindings for Rust"
repository = "https://github.com/joshprk/libobs-rs"
documentation = "https://joshprk.github.io/libobs-rs/libobs/"
readme = "./README.md"
authors = ["Joshua Park <joshprk@proton.me>", "sshcrack"]
categories = ["multimedia::video", "multimedia::audio", "multimedia", "multimedia::encoding"]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
bindgen = "0.71.1"

[features]
default = ["generate_bindings"]
generate_bindings = []

[dev-dependencies]
vsprintf = "2.0.0"
