[package]
name = "libobs"
version = "3.0.1+32.0.2"
description = "LibOBS bindings for Rust"
repository = "https://github.com/joshprk/libobs-rs"
documentation = "https://joshprk.github.io/libobs-rs/libobs/"
readme = "./README.md"
authors = ["Joshua Park <joshprk@proton.me>", "Hendrik Lind <hendrik@sshcrack.me>"]
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[target.'cfg(target_family = "windows")'.build-dependencies]
bindgen = { version = "0.72.1", optional = true }

# For non-windows targets, bindgen is always required to generate bindings
[target.'cfg(not(target_family = "windows"))'.build-dependencies]
bindgen = "0.72.1"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"

[features]
default = []
generate_bindings = ["dep:bindgen"]

[dev-dependencies]
vsprintf = "2.0.0"

[lints]
workspace = true
