[package]
name = "download-at-runtime"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
indicatif = "0.17.11"
libobs-bootstrapper = { workspace = true }
libobs-wrapper = { workspace = true }
libobs-sources = { workspace = true }
tokio = { version = "1.44.1", features = ["full"] }
env_logger = "0.11"

[[bin]]
name = "record"
path = "src/record.rs"
