[package]
name = "monitor-capture"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
libobs-wrapper = { path = "../../libobs-wrapper", features = ["bootstrapper"] }
libobs-sources = { path = "../../libobs-sources" }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
