[package]
name = "obs-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
libobs-wrapper = { version = "4.0.0", path = "../../libobs-wrapper", features = ["bootstrapper"] }
libobs-sources = { version = "2.0.6", path = "../../libobs-sources" }
tokio = { version = "1.44.2", features = ["full"] }
