[package]
name = "obs-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
libobs-wrapper = { path = "../../libobs-wrapper", features = ["bootstrapper"] }
libobs-sources = { path = "../../libobs-sources" }
tokio = { version = "1.44.2", features = ["full"] }
