[package]
name = "obs-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
libobs-bootstrapper = { workspace = true }
libobs-wrapper = { workspace = true }
libobs-sources = { path = "../../libobs-sources" }
tokio = { version = "1.44.2", features = ["full"] }
