[package]
name = "obs-preview"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.8"
libobs-wrapper = { path = "../../libobs-wrapper", features = ["blocking", "bootstrapper"] }
libobs-sources = { path = "../../libobs-sources", features = ["blocking"] }
winit = "0.30.9"
