[package]
name = "libobs-encoders-generator"
version = "0.1.1"
edition = "2024"

[dependencies]
libobs-wrapper = { workspace = true, features = ["bootstrapper"] }
libobs = { version = "2.1.0", path = "../../libobs" }
anyhow = "1.0.97"
num-traits = "0.2.19"
num-derive = "0.4.2"
tokio = { version = "1.44.2", features = ["full"] }
